--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -85,5 +85,5 @@
 \end{tabular}}
 }
 
-\newcommand{\mensaje}[1]{\centerline{#1}}
+\newcommand{\mensaje}[1]{\framebox{\parbox{0.9\textwidth}{\centerline{\code{#1}}}}}
 \newcommand{\qi}{Qi}
