--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -77,9 +77,9 @@ Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Arquitecturas Q}
 
-Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura $Q_{i+1}$ agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a la arquitectura  $Q_{i}$ anterior.
+Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura $Q_{i+1}$ agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a la arquitectura  $Q_{i}$ anterior (ver figura \ref{ArquitecturasQ})
 
-\graf{ArquitecturasQ}{Cebolla Qi}
+\graf[9cm]{ArquitecturasQ}{Organización en capas de la arquitectura \Q}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
