--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -158,7 +158,7 @@ El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de 
 
 El formato de instrucción de salto condicional es el siguiente:\\
 
-\formatoinstr{|c|c|}{Cod\_Op (8)&Desplazamiento(8)} donde los primeros cuatro bits del campo \code{Cod\_Op} es la cadena \bin{1111}. Si \textbf{al evaluar la condición de salto} el resultado es 1, se le suma al PC el valor del desplazamiento, representado en \cados{8}. En caso contrario la instrucción no hace nada.
+\formatoinstr{|c|c|}{CodOp (8)&Desplazamiento(8)} donde los primeros cuatro bits del campo \code{CodOp} es la cadena \code{1111}. Si \textbf{al evaluar la condición de salto} el resultado es 1, se le suma al PC el valor del desplazamiento, representado en el sistema Complemento a 2 de 8 bits. En caso contrario la instrucción no hace nada.
 
 
 El efecto de cualquier salto condicional es aumentar el PC (Program Counter) en la cantidad de celdas que indique el desplazamiento si sólo la condición que cada salto condicional tiene da como resultado 1, lo cual es interpretado como verdadero.
